--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     },
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0 || ^8.0"
     }
 }
