--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "india-pincode-regex",
-  "version": "1.0.0",
+  "name": "pincode",
+  "version": "1.0.2",
   "description": "A simple regex based validator for PIN codes in India",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests/validate.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,6 @@
   "homepage": "https://github.com/captn3m0/india-pincode-regex#readme",
   "devDependencies": {
     "regexgen": "^1.3.0"
-  }
+  },
+  "dependencies": {}
 }
