--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pincode",
+  "name": "pincode-validator",
   "version": "1.0.2",
   "description": "A simple regex based validator for PIN codes in India",
   "main": "src/index.js",
