--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,11 @@ jobs:
       node_js: '12'
     - language: node_js
       node_js: '13'
+    - language: python
+      node_js: '3.5'
+    - language: python
+      node_js: '3.6'
+    - language: python
+      node_js: '3.7'
+    - language: python
+      node_js: '3.8'
