--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,14 @@ jobs:
     - language: node_js
       node_js: '13'
     - language: python
-      node_js: '3.5'
+      python: '3.5'
+      script: nosetests tests/test.py
     - language: python
-      node_js: '3.6'
+      python: '3.6'
+      script: nosetests tests/test.py
     - language: python
-      node_js: '3.7'
+      python: '3.7'
+      script: nosetests tests/test.py
     - language: python
-      node_js: '3.8'
+      python: '3.8'
+      script: nosetests tests/test.py
