Initial commit for rubygem

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-/vendor/
-/node_modules/
-composer.lock
-__pycache__/
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
 /dist/
-package-lock.json
+/doc/
+/node_modules/
+/pkg/
+/spec/reports/
+/tmp/
+/vendor/
+__pycache__/
+/composer.lock
+/package-lock.json
