--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node tests/validate.js"
+    "test": "node tests/validate.js",
+    "browserify": "browserify --transform brfs --outfile pincode-regex.js -s Pincode src/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
   },
   "homepage": "https://github.com/captn3m0/india-pincode-regex#readme",
   "devDependencies": {
+    "brfs": "^2.0.2",
+    "browserify": "^16.5.1",
     "regexgen": "^1.3.0"
   },
   "dependencies": {}
