Don't commit Gemfile.lock
Current best practice is to commit this
https://bundler.io/man/bundle-install.1.html#THE-GEMFILE-LOCK
but we have zero deps, so it doesn't make sense

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 __pycache__/
 /composer.lock
 /package-lock.json
+# Current best practice is to commit this
+# https://bundler.io/man/bundle-install.1.html#THE-GEMFILE-LOCK
+# but we have zero deps, so it doesn't make sense
+Gemfile.lock
