--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 # Generated file for browsers
-pincode-regex.js=linguist-generated
+pincode-regex.js linguist-generated
 # jasmine is vendored for browser tests
-tests/jasmine-3.5.0/*=linguist-vendored
+tests/jasmine-3.5.0/* linguist-vendored
 # regex.txt is generated (see src/generate.js)
-regex.txt=linguist-generated
+regex.txt linguist-generated
