[php] Fix 7.2 tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
           php-version: ${{matrix.php}}
           tools: phpunit, composer
       - run: composer install --no-interaction
-      - run: ./vendor/bin/phpunit --migrate-configuration
+      - run: ./vendor/bin/phpunit
   ruby:
     strategy:
       matrix:
