--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "devDependencies": {
     "brfs": "^2.0.2",
     "browserify": "^17.0.0",
-    "regexgen": "^1.3.0"
+    "regexgen": "^1.3.0",
+    "jasmine-core": "^5.0.0"
   },
   "dependencies": {}
 }
